--- a/Resource.rc
+++ b/Resource.rc
@@ -52,16 +52,14 @@ END
 
 IDD_DIALOG DIALOGEX 0, 0, 309, 176
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Palette"
+CAPTION "Dart score"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,252,155,50,14
     CONTROL         "",IDC_SATURATION,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,49,46,253,11
-    CONTROL         "",IDC_LIGHTNESS,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,49,66,253,11
-    LTEXT           "Saturation",IDC_STATIC,7,47,34,8
-    LTEXT           "Lightness",IDC_LORV,7,66,31,8
-    CONTROL         "HSL",IDC_HSL,"Button",BS_AUTORADIOBUTTON,25,14,28,10
-    CONTROL         "HSV",IDC_HSV,"Button",BS_AUTORADIOBUTTON,25,30,29,10
+    LTEXT           "Accuracy",IDC_STATIC,7,47,30,8
+    LTEXT           "Aiming at : ",IDC_STATIC,7,22,37,8
+    LTEXT           "bullseye",IDC_AIMING_AT,62,22,85,8
 END
 
 
