--- a/dartsScore.vcxproj.filters
+++ b/dartsScore.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="dimensions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dart.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
