--- a/Resource.rc
+++ b/Resource.rc
@@ -50,16 +50,18 @@ END
 // Dialog
 //
 
-IDD_DIALOG DIALOGEX 0, 0, 309, 176
+IDD_DIALOG DIALOGEX 0, 0, 195, 99
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dart score"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,252,155,50,14
-    CONTROL         "",IDC_SATURATION,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,49,46,253,11
+    PUSHBUTTON      "Cancel",IDCANCEL,138,78,50,14
+    CONTROL         "",IDC_SATURATION,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,64,48,124,11
     LTEXT           "Accuracy",IDC_STATIC,7,47,30,8
     LTEXT           "Aiming at : ",IDC_STATIC,7,22,37,8
-    LTEXT           "bullseye",IDC_AIMING_AT,62,22,85,8
+    LTEXT           "---",IDC_AIMING_AT,67,23,85,8
+    LTEXT           "Expoected score",IDC_STATIC,7,35,54,8
+    LTEXT           "0",IDC_EXPECTED_SCORE,67,36,85,8
 END
 
 
@@ -74,9 +76,9 @@ BEGIN
     IDD_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 188
         TOPMARGIN, 7
-        BOTTOMMARGIN, 169
+        BOTTOMMARGIN, 92
     END
 END
 #endif    // APSTUDIO_INVOKED
